a1b/auto_tests/make.err
a1fs.c: In function ‘a1fs_mkdir’:
a1fs.c:260:28: error: comparison between pointer and integer [-Werror]
  if (strchr(path, len - 1) == '/') {
                            ^~
a1fs.c:266:21: error: ‘path_search’ undeclared (first use in this function); did you mean ‘bsearch’?
  parent_path[strlen(path_search) - strlen(dirname) - 1] = '\0';
                     ^~~~~~~~~~~
                     bsearch
a1fs.c:266:21: note: each undeclared identifier is reported only once for each function it appears in
a1fs.c:269:50: error: ‘image’ undeclared (first use in this function)
  a1fs_inode *parent_inode = get_inode_by_inumber(image, inum);
                                                  ^~~~~
cc1: all warnings being treated as errors
make: *** [a1fs.o] Error 1
